Update versioning.yml (MINOR)

--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -27,7 +27,7 @@ jobs:
         major_regexp_flags: ""
         minor_pattern: "(MINOR)"
         minor_regexp_flags: ""
-        version_format: "${major}.${minor}.${patch}"
+        version_format: "${major}.${minor}.${patch}-${{ env.BRANCH_NAME }}.${increment}"
         bump_each_commit: true
         bump_each_commit_patch_pattern: ""
         search_commit_body: true
