--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -18,21 +18,11 @@ jobs:
       with:
         fetch-depth: 0
         
-    - name: Calculate Semantic Versioning
-      uses: paulhatch/semantic-version@v5.3.0
-      id: semantic_versioning
-      with:
-        tag_prefix: "v"
-        major_pattern: "(MAJOR)"
-        major_regexp_flags: ""
-        minor_pattern: "(MINOR)"
-        minor_regexp_flags: ""
-        version_format: "${major}.${minor}.${patch}-${{ env.BRANCH_NAME }}.${increment}"
-        bump_each_commit: true
-        bump_each_commit_patch_pattern: ""
-        search_commit_body: true
-        enable_prerelease_mode: false
-        debug: true
+    - name: Run versioning script file
+      run: |
+         chmod +x ./scripts/versioning.sh
+         ./scripts/versioning.sh
+      shell: bash
 
     - name: check commit
       run: git describe --tags
