--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -65,8 +65,10 @@ jobs:
     steps:
     - name: Checkout the repository
       uses: actions/checkout@v3
+    - id: git_tag
+      run: git describe --abbrev=0 --tags
     - name: Run the Makefile and Build the Project
-      run: make
+      run: make TAG_NAME=git describe --tags
     - name: Create Artifacts
       uses: actions/upload-artifact@v3.1.2
       with:
