--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -80,7 +80,10 @@ jobs:
     - name: Check output
       env:
         RELEASE_VERSION: ${{ steps.git_tag.outputs.tag }}
-      
+        run: |
+          echo $RELEASE_VERSION
+          echo ${{ steps.git_tag.outputs.tag }}
+          
     - name: Run the Makefile and Build the Project
       run: make TAG_NAME=${{ steps.git_tag.outputs.tag }}
     - name: Create Artifacts
