--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -24,3 +24,6 @@ jobs:
          ./scripts/versioning.sh
       shell: bash
 
+    - name: Check output
+      id: git_tag
+      run: tag = ${git describe --abbrev=0 --tags}
