--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -76,18 +76,18 @@ jobs:
     - name: Checkout the repository
       uses: actions/checkout@v4   
     - id: git_tag
-      run: echo "tag = ${git describe --abbrev=0 --tags}"
+      run: echo "tag = git describe --tags"
     - name: Check output
       run: |
         echo $RELEASE_VERSION
         echo ${{ steps.git_tag.outputs.tag }}
           
     - name: Run the Makefile and Build the Project
-      run: make TAG_NAME=${git describe --abbrev=0 --tags}
+      run: make TAG_NAME=git describe --tags
     - name: Create Artifacts
       uses: actions/upload-artifact@v3.1.2
       with:
-        name: build_files_${git describe --abbrev=0 --tags}
+        name: build_files_git describe --tags
         path: |
           ./*.elf
           ./*.hex
