--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -75,19 +75,17 @@ jobs:
     steps:
     - name: Checkout the repository
       uses: actions/checkout@v4   
+      
     - id: git_tag
-      run: echo "tag = git describe --tags"
-    - name: Check output
-      run: |
-        echo $RELEASE_VERSION
-        echo ${{ steps.git_tag.outputs.tag }}
+      run: echo "GIT_TAG=`echo $(git describe --tags)`" >> $GITHUB_ENV
           
     - name: Run the Makefile and Build the Project
-      run: make TAG_NAME=git describe --tags
+      run: make TAG_NAME=${{ steps.git_tag.outputs.GIT_TAG }}
+      
     - name: Create Artifacts
       uses: actions/upload-artifact@v3.1.2
       with:
-        name: build_files_git describe --tags
+        name: build_files_${{ steps.git_tag.outputs.GIT_TAG }}
         path: |
           ./*.elf
           ./*.hex
