--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -25,7 +25,8 @@ jobs:
       shell: bash
 
     - name: set up env var
-      run: echo "TAG=$(shell git describe --tags)" >> $GITHUB_ENV
+      run: echo "TAG=$(git describe --tags)" >> $GITHUB_ENV
+      shell: bash
     - name: use env var
       run: echo ${{ env.TAG }}
           
