--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -74,18 +74,19 @@ jobs:
       packages: write
       contents: read
     steps:
-    - id: git_tag
-      run: echo "GIT_TAG=`echo $(git describe --tags)`" >> $GITHUB_ENV
+    - name: set up env var
+      run: echo "GIT_TAG=$(git describe --tags)" >> $GITHUB_ENV
+      shell: bash
     - name: Checkout the repository
       uses: actions/checkout@v4   
   
     - name: Run the Makefile and Build the Project
-      run: make
+      run: make GIT_TAG=${{ env.GIT_TAG }}
       
     - name: Create Artifacts
       uses: actions/upload-artifact@v3.1.2
       with:
-        name: build_files_${{ steps.git_tag.outputs.GIT_TAG }}
+        name: build_files_${{ env.GIT_TAG }}
         path: |
           ./*.elf
           ./*.hex
