--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -6,6 +6,7 @@ on:
       - 'main'
       - 'dev'
       - 'release/*'
+    paths:
       - '.github/workflows/ci-workflow.yml'
   pull_request:
     branches:
