--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -86,8 +86,10 @@ jobs:
       shell: bash
       
     - name: Run the Makefile and Build the Project
-      run: make VERSION=${{ env.GIT_TAG }}
-      
+      run: |
+        make
+#make VERSION=${{ env.GIT_TAG }}
+
     - name: Create Artifacts
       uses: actions/upload-artifact@v3.1.2
       with:
