--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -3,7 +3,10 @@ name: Versioning
 on:
   push:
     branches:
-      - 'versioning'
+      - '**'
+  pull_request:
+    branches:
+      - '**'  
   workflow_dispatch:
   
 env:
