--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,23 +20,34 @@ env:
   IMAGE_TAG: ${REGISTRY,,}"/"${ORG_NAME,,}"/"${REPO_NAME,,}":"${VERSION,,}
   
 jobs:
+  variable_substitution:
+    runs-on: ubuntu-22.04
+    outputs:
+      image: ${{ steps.set_image.outputs.image }}
+    steps:
+    - id: set_image
+      run: echo "image=${{env.IMAGE_TAG}}" >> $GITHUB_OUTPUT
+      
   build_image:
+    needs: variable_substitution
     runs-on: ubuntu-22.04
     permissions:
+      contents: read
       packages: write
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2.2.0
+      uses: docker/login-action@v3.0.0
       with:
         registry: ${{env.REGISTRY}}
         username: ${ORG_NAME,,}
         password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Build Docker Image
-      run: |
-        docker build . --file Dockerfile --tag ${{ env.IMAGE_TAG }}
-        docker run ${{ env.IMAGE_TAG }}
-        docker push ${{ env.IMAGE_TAG }}
-        echo "The image " ${{ env.IMAGE_TAG }} " has been created"
-
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: ${{needs.variable_substitution.outputs.image}}
+        secrets: |
+            GIT_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN }}
