--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -26,3 +26,9 @@ jobs:
          chmod +x ./scripts/versioning.sh
          ./scripts/versioning.sh
       shell: bash
+    - run: |
+        ls
+        pwd
+        echo "**********"
+        cd ..
+        ls pwd
