--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -34,3 +34,11 @@ jobs:
         cd ..
         ls
         pwd
+        echo "**********"
+        cd ..
+        ls
+        pwd
+        echo "**********"
+        cd ..
+        ls
+        pwd
