--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,6 +1,9 @@
 name: "Static Analysis"
 
 on:
+  push:
+    branches:
+      - 'static-analysis'
   workflow_dispatch:
       
 env:
@@ -42,29 +45,15 @@ jobs:
           git config --global --add safe.directory '*'
           echo "GIT_TAG=$(git describe --tags)" >> $GITHUB_ENV
         shell: bash
-#      - name: Install CppCheck
-#        run: |
-#          CMAKE_VERSION=3.23.2 && \
-#          wget https://github.com/Kitware/CMake/releases/download/v$CMAKE_VERSION/cmake-$CMAKE_VERSION-Linux-x86_64.sh && \
-#          chmod a+x cmake-$CMAKE_VERSION-Linux-x86_64.sh && \
-#          ./cmake-$CMAKE_VERSION-Linux-x86_64.sh --skip-license --prefix=/usr/local && \
-#          rm cmake-$CMAKE_VERSION-Linux-x86_64.sh
-#
-#          git clone --depth 1 https://github.com/danmar/cppcheck.git && \
-#          cmake -S cppcheck -B cppcheck/build -G Ninja -DCMAKE_BUILD_TYPE=Release && \
-#          cmake --build cppcheck/build --target install && \
-#          rm -fr cppcheck
-
       - name: Run CppCheck
         run: |
-          cppcheck --enable=all --language=c --std=c11 --output-file=cppcheck_report_${{ env.GIT_TAG }}.txt --addon=./misra/misra.json -I ./Drivers/ -I ./Core/Inc/ ./Core/Src/main.c
-
+          cppcheck --enable=all --language=c --std=c11 --output-file=cppcheck_report_${{ env.GIT_TAG }}.txt --addon=./tests/misra.json --suppressions-list=./tests/suppressions.txt .
       - name: Install and Run CppLint
         run: |
           cpplint --extensions=c --recursive ./Core/Src/main.c >> cpplint_report_${{ env.GIT_TAG }}.txt 2>&1
         continue-on-error: true
-        
-      - uses: actions/upload-artifact@v3
+      - name: Create Artifact
+        uses: actions/upload-artifact@v3
         with:
           name: CppReports_${{ env.GIT_TAG }}
           path: |
