--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -47,10 +47,10 @@ jobs:
         shell: bash
       - name: Run CppCheck
         run: |
-          cppcheck --enable=all --output-file=cppcheck_report_${{ env.GIT_TAG }}.txt --addon=./tests/misra.json --suppressions-list=./tests/suppressions.txt --file-list=check_list.txt
+          cppcheck --enable=all --output-file=cppcheck_report_${{ env.GIT_TAG }}.txt --addon=./tests/misra.json --suppressions-list=./tests/suppressions.txt --file-list=./tests/check_list.txt
       - name: Install and Run CppLint
         run: |
-          cpplint --extensions=c --recursive --file-list=check_list.txt >> cpplint_report_${{ env.GIT_TAG }}.txt 2>&1
+          cpplint --extensions=c --recursive --file-list=./tests/check_list.txt >> cpplint_report_${{ env.GIT_TAG }}.txt 2>&1
         continue-on-error: true
       - name: Create Artifact
         uses: actions/upload-artifact@v3
