--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -47,7 +47,7 @@ jobs:
         shell: bash
       - name: Run CppCheck
         run: |
-          cppcheck --enable=all --output-file=cppcheck_report_${{ env.GIT_TAG }}.txt --file-list="./tests/cpp_files.txt" --suppressions-list="./tests/suppressions.txt" --addon="./tests/misra.json" .
+          cppcheck --enable=all --output-file=cppcheck_report_${{ env.GIT_TAG }}.txt --file-list="./tests/cpp_files.txt" --suppressions-list="./tests/suppressions.txt" --addon="./tests/misra.json"
       - name: Run CppLint
         continue-on-error: true
         run: |
